# textming_KCI_RISS

./: .gitignore  .gitmodules  00_config.R  00_interactive_utils.R  00_run_pipeline.R  00_utils.R  02_kiwipiepy_mopheme_analysis.R  03-1_ngram_analysis.R  03-3_create_user_dict.R  04_dtm_creation_interactive.R  AI 추천 복합명사 프롬프트.txt  BAREUN_MANUAL.md  CITATION.cff  CITATION.md  CLAUDE.md  CLEANUP_REPORT.md  DEMO.md  LICENSE  README.md  README_IMPORTANT_FILES.md  create_sample_data.R  data_flow_analysis_report.md  improvement_summary.md  main.py  optimize_performance.R  pyproject.toml  requirements.txt  scripts  프롬프트 가이드(bareun).md  프롬프트 가이드(kiwi).md
backup_results/: 20250812_154644_morpheme_analysis_kiwipiepy_cong_default.csv  20250812_154644_morpheme_results_kiwipiepy_cong_default.rds
plots/: 20250811_205200_quanteda_frequency_wordcloud.html  20250811_205200_quanteda_tfidf_wordcloud.html
python/: README.md
results/: STM_분석결과_보고서_20250811_211722_K10.md  STM_분석결과_보고서_20250811_211816_K10.md  STM_분석결과_보고서_20250811_212118_K10.md  STM_분석결과_보고서_20250811_212235_K10.md  STM_분석결과_보고서_20250812_145911_K10.md  STM_분석결과_보고서_20250812_150618_K10.md  kci_riss_doc_topic_proportions_20250811_212118_K10.RData  kci_riss_doc_topic_proportions_20250812_145911_K10.RData  kci_riss_doc_topic_proportions_20250812_150353_K10.RData  kci_riss_document_topics_20250811_211722_K10.csv  kci_riss_document_topics_20250811_212118_K10.csv  kci_riss_document_topics_20250811_212235_K10.csv  kci_riss_document_topics_20250812_145911_K10.csv  kci_riss_document_topics_20250812_150457_K10.csv  (+14 more)
slide/: slides.md  (+2 more)
(+20 files in other folders)
