[project]
name = "textmining-kci-riss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kiwipiepy>=0.21.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
